--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav>
       <ul>
         <li><a href="#hero">Home</a></li>
-        <li><a href="about">About</a></li>
+        <li><a href="#about">About Me</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -35,20 +35,23 @@
     </div>
   </section>
 
-  <section id="about" class="section">
-    <div class="container">
+  <section id="about" class="section fade-in-up">
+    <div class="container about-container">
       <h2>About Me</h2>
-      <p>
-        I am a passionate Computer Science Engineering student at Lovely Professional University with a strong foundation in web development and programming. I focus on creating clean, efficient, and user-friendly applications using modern technologies.
-      </p>
-      <p>
-        With expertise in both frontend and backend development, I enjoy building seamless digital experiences and solving complex problems through code. My approach combines technical skill with creative thinking to develop solutions that are both functional and intuitive.
-      </p>
-      <p>
-        I'm constantly expanding my knowledge through hands-on projects, certifications, and competitive coding. My goal is to contribute to innovative tech solutions that make a positive impact.
-      </p>
+      <div class="about-content glass-card">
+        <p>
+          I am a passionate Computer Science Engineering student at Lovely Professional University with a strong foundation in web development and programming. I focus on creating clean, efficient, and user-friendly applications using modern technologies.
+        </p>
+        <p>
+          With expertise in both frontend and backend development, I enjoy building seamless digital experiences and solving complex problems through code. My approach combines technical skill with creative thinking to develop solutions that are both functional and intuitive.
+        </p>
+        <p>
+          I'm constantly expanding my knowledge through hands-on projects, certifications, and competitive coding. My goal is to contribute to innovative tech solutions that make a positive impact.
+        </p>
+      </div>
     </div>
   </section>
+  
 
   <section id="skills" class="section fade-in-up">
     <div class="container">
@@ -102,7 +105,9 @@
     <div class="container">
       <h2>Projects</h2>
       <div class="projects-grid">
+        
         <div class="project-card">
+          <img src="https://raw.githubusercontent.com/asharma2103/portfolio/main/ecommerce.png" alt="E-commerce Project Screenshot" class="project-img">
           <h3>E-commerce Website</h3>
           <p>Developed a full-stack e-commerce platform with secure authentication, product management, and payment integration. Implemented user-friendly UI/UX using React and CSS, enhancing customer experience.</p>
           <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Bootstrap, MySQL, React, Node.js</p>
@@ -110,6 +115,7 @@
         </div>
   
         <div class="project-card">
+          <img src="https://raw.githubusercontent.com/asharma2103/portfolio/main/chat.png" alt="Real-Time Chat App Screenshot" class="project-img">
           <h3>Real-Time Chat Application</h3>
           <p>Utilized WebSockets and Socket.io for seamless bidirectional communication. Built a responsive front-end with HTML, CSS, and JavaScript. Implemented user authentication and message persistence.</p>
           <p><strong>Technologies:</strong> HTML, CSS, JavaScript, Bootstrap, MySQL, React, Node.js, Socket.io</p>
@@ -117,26 +123,36 @@
         </div>
   
         <div class="project-card">
+          <img src="https://raw.githubusercontent.com/asharma2103/portfolio/main/job.png" alt="Job Portal Web App Screenshot" class="project-img">
           <h3>Job Portal Web Application</h3>
           <p>Developed a fully functional job portal enabling user registration, job posting, job application, and resume management. Implemented role-based access for admins, employers, and job seekers.</p>
           <p><strong>Technologies:</strong> Laravel, MySQL, HTML, CSS, JavaScript</p>
           <p><strong>Date:</strong> December 2024</p>
         </div>
+  
+      </div>
+    </div>
+  </section>
+
+  <section id="certifications" class="section fade-in-up">
+    <div class="container">
+      <h2>Certifications</h2>
+      <div class="certifications-grid">
+        <a href="https://example.com/certificate-cpp" target="_blank" class="cert-card glass-card">
+          <h3>C++ and Data Structures and Algorithms</h3>
+          <p><strong>Platform:</strong> Cipher Schools</p>
+          <p><strong>Date:</strong> July 2024</p>
+        </a>
+  
+        <a href="https://example.com/certificate-leadership" target="_blank" class="cert-card glass-card">
+          <h3>Leadership Through Social Influence</h3>
+          <p><strong>Platform:</strong> Coursera</p>
+          <p><strong>Date:</strong> October 2024</p>
+        </a>
       </div>
     </div>
   </section>
   
-
-
-  <section id="certifications" class="section">
-    <div class="container">
-      <h2>Certifications</h2>
-      <ul>
-        <li>C++ and Data Structures and Algorithms - Cipher Schools (July 2024)</li>
-        <li>Leadership Through Social Influence - Coursera (October 2024)</li>
-      </ul>
-    </div>
-  </section>
 
   <section id="achievements" class="section fade-in-up">
   <div class="container">
